# intent2model

./: .env.example  .gitignore  CONTRIBUTING.md  FIXES_APPLIED.md  HOW_TO_USE.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RESTART_GUIDE.md  SYSTEM_ARCHITECTURE.md  Untitled  VERCEL_DEPLOY.md  keep-backend-alive.sh  model_33b32411_training_notebook.ipynb  model_3a148c19_training_notebook.ipynb  model_61f07edb_training_notebook.ipynb  model_79e3a052_training_notebook.ipynb  model_81a9ae92_training_notebook.ipynb  pyproject.toml  requirements.txt  start.sh  stop.sh
.github/workflows/: build-engine.yml  test.yml
backend/: __init__.py  main.py  run.sh  run_engine.py
backend/agents/: __init__.py  auto_fix_agent.py  automl_agent.py  autonomous_executor.py  code_repair_agent.py  diagnosis_agent.py  error_analyzer.py  error_gating.py  execution_planner.py  explainer_agent.py  intent_detector.py  llm_interface.py  model_explainer.py  notebook_code_agent.py  pipeline_validator.py  plan_compiler.py  plan_normalizer.py  planner_agent.py  question_agent.py  reasoning_agent.py  recovery_agent.py
backend/ml/: __init__.py  evaluator.py  pipeline_builder.py  profiler.py  trainer.py
backend/schemas/: __init__.py  failure_schema.py  pipeline_schema.py  run_state_schema.py  session_schema.py
backend/utils/: __init__.py  api_key_manager.py  artifact_generator.py  logging.py
drift/: __init__.py  __main__.py  api.py  engine_launcher.py
drift-npm/: README.md  package.json
drift-repo/: README.md
drift/cli/: __init__.py  client.py  repl.py  session.py
drift/llm_adapters/: __init__.py  base.py  gemini_cli.py  local_llm.py
drift_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engine_build/: README.md  drift-engine.spec
frontend/: next.config.ts  package-lock.json  package.json
research/: ablation_tests.py  experiments.ipynb  user_simulation.py
scripts/: init-drift-repo.sh  publish-all.sh  publish-npm.sh  trigger-engine-release.sh  verify-drift.sh
tests/: __init__.py  conftest.py  test_api.py  test_automl_agent.py  test_evaluator.py  test_plan_normalizer.py
(+15 files in other folders)
