[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drift"
version = "0.1.1"
description = "Terminal-first AutoML CLI - chat-based ML engineer"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
drift = "drift.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drift*"]
