[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-ml"
version = "0.2.8"
description = "drift — terminal-first, chat-based AutoML. Open source. No tokens. No auth."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]
readme = "README.md"
keywords = ["automl", "ml", "machine-learning", "cli", "chat", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lakshitsachdeva/intent2model"
Repository = "https://github.com/lakshitsachdeva/intent2model"

[project.scripts]
drift = "drift.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drift*"]
